--- a/index.html
+++ b/index.html
@@ -7,13 +7,6 @@
   <title>Event Planner</title>
   <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="./style.css">
-  <style>
-body {
-      font-family:'Times New Roman', Times, serif;
-      background-color: #020f31; /* Light gray background */
-      color: #333333; /* Dark text color */
-    }
-  </style>
 </head>
 
 <body>
@@ -44,7 +37,7 @@ body {
       <ul class="flex items-center space-x-8 text-sm font-medium">
         <li>
           <a href="./index.html"
-            class="text-gray-800 dark:text-white hover:text-blue-400 transition-colors duration-300 ease-in-out">Trending
+            class="text-gray-800 dark:text-white hover:text-blue-400 transition-colors duration-300 ease-in-out">
         </li>
         <!-- Add more navigation links as needed -->
       </ul>
