--- a/auth/login/login.html
+++ b/auth/login/login.html
@@ -8,121 +8,126 @@
   <link href="https://cdn.jsdelivr.net/npm/flowbite@2.4.1/dist/flowbite.min.css" rel="stylesheet" />
   <style>
     body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #020f31;  /* Light gray background */
-    color: #333; /* Dark text color */
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-  }
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #1e1e1e; /* Dark background */
+      color: #e0e0e0; /* Light text color */
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      min-height: 100vh;
+    }
 
-  .container {
-    max-width: 400px;
-    width: 100%;
-    padding: 20px;
-    background-color: #ffffff; /* White container background */
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Soft shadow */
-    margin: auto;
-    margin-top: 20px;
-  }
+    .container {
+      max-width: 400px;
+      width: 100%;
+      padding: 20px;
+      background-color: #2c2c2c; /* Dark container background */
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Stronger shadow */
+      margin: auto;
+      margin-top: 40px;
+    }
 
-  h1 {
-    text-align: center;
-    font-size: 2rem;
-    margin-bottom: 20px;
-    color: #333; /* Dark text color */
-  }
+    h1 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 20px;
+      color: #e0e0e0; /* Light text color */
+    }
 
-  label {
-    display: block;
-    margin-bottom: 5px;
-    font-size: 0.875rem; /* 14px */
-    font-weight: 500;
-    color: #333; /* Dark text color */
-  }
+    label {
+      display: block;
+      margin-bottom: 5px;
+      font-size: 0.875rem; /* 14px */
+      font-weight: 500;
+      color: #e0e0e0; /* Light text color */
+    }
 
-  input[type="email"],
-  input[type="password"] {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 15px;
-    border: 1px solid #ddd; /* Light border */
-    border-radius: 4px;
-    font-size: 0.875rem; /* 14px */
-    color: #333; /* Dark text color */
-    transition: border-color 0.3s ease-in-out;
-  }
+    input[type="email"],
+    input[type="password"] {
+      width: 100%;
+      padding: 10px;
+      margin-bottom: 15px;
+      border: 1px solid #555; /* Darker border */
+      border-radius: 4px;
+      background-color: #3c3c3c; /* Dark input background */
+      color: #e0e0e0; /* Light text color */
+      transition: border-color 0.3s ease-in-out;
+    }
 
-  input[type="email"]:focus,
-  input[type="password"]:focus {
-    outline: none;
-    border-color: #4a90e2; /* Blue focus border */
-  }
+    input[type="email"]::placeholder,
+    input[type="password"]::placeholder {
+      color: #bbbbbb; /* Gray placeholder text */
+    }
 
-  button[type="submit"] {
-    width: 100%;
-    padding: 12px;
-    background-color: #4a90e2; /* Blue button background */
-    border: none;
-    border-radius: 4px;
-    font-size: 0.875rem; /* 14px */
-    font-weight: 600;
-    color: #ffffff; /* White text */
-    cursor: pointer;
-    transition: background-color 0.3s ease-in-out;
-  }
+    input[type="email"]:focus,
+    input[type="password"]:focus {
+      outline: none;
+      border-color: #4caf50; /* Green focus border */
+    }
 
-  button[type="submit"]:hover {
-    background-color: #3579b3; /* Darker blue on hover */
-  }
+    button[type="submit"] {
+      width: 100%;
+      padding: 12px;
+      background-color: #4caf50; /* Green button background */
+      border: none;
+      border-radius: 4px;
+      font-size: 0.875rem; /* 14px */
+      font-weight: 600;
+      color: #ffffff; /* White text */
+      cursor: pointer;
+      transition: background-color 0.3s ease-in-out;
+    }
 
-  .create-account {
-    text-align: center;
-    margin-top: 15px;
-    font-size: 0.875rem; /* 14px */
-  }
+    button[type="submit"]:hover {
+      background-color: #45a049; /* Darker green on hover */
+    }
 
-  .create-account a {
-    color: #4a90e2; /* Blue link color */
-    text-decoration: none;
-    transition: color 0.3s ease-in-out;
-  }
+    .create-account {
+      text-align: center;
+      margin-top: 15px;
+      font-size: 0.875rem; /* 14px */
+    }
 
-  .create-account a:hover {
-    color: #3579b3; /* Darker blue on hover */
-  }
+    .create-account a {
+      color: #4caf50; /* Green link color */
+      text-decoration: none;
+      transition: color 0.3s ease-in-out;
+    }
 
-  /* Navbar styles */
-  .navbar {
-    background-color: #4a90e2; /* Blue navbar background */
-    color: #ffffff; /* White text color */
-    padding: 10px 0;
-    width: 100%;
-    box-sizing: border-box;
-  }
+    .create-account a:hover {
+      color: #45a049; /* Darker green on hover */
+    }
 
-  .navbar .container {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 20px;
-  }
+    /* Navbar styles */
+    .navbar {
+      background-color: #333333; /* Dark navbar background */
+      color: #ffffff; /* White text color */
+      padding: 10px 0;
+      width: 100%;
+      box-sizing: border-box;
+    }
 
-  .navbar a {
-    display: flex;
-    align-items: center;
-    text-decoration: none;
-    color: #ffffff; /* White text color */
-  }
+    .navbar .container {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 20px;
+    }
 
-  .navbar img {
-    height: 40px;
-  }
+    .navbar a {
+      display: flex;
+      align-items: center;
+      text-decoration: none;
+      color: #ffffff; /* White text color */
+    }
+
+    .navbar img {
+      height: 40px;
+    }
   </style>
 </head>
 
@@ -131,13 +136,13 @@
     <div class="container">
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="https://flowbite.com/docs/images/logo.svg" alt="Flowbite Logo">
-        <span class="text-2xl font-semibold" style="color:#4a90e2;">Event Planner</span>
+        <span class="text-2xl font-semibold" style="color:#4caf50;">Event Planner</span>
       </a>
-      
     </div>
   </nav>
   <div>
-    <h1>Log In your Account</h1></div>
+    <h1>Log In to Your Account</h1>
+  </div>
   <div class="container">
     <h1>Login</h1>
     <form id="login_form" class="max-w-sm mx-auto">
@@ -147,7 +152,7 @@
       </div>
       <div class="mb-5">
         <label for="password">Your password</label>
-        <input type="password" id="password" required />
+        <input type="password" id="password" placeholder="********" required />
       </div>
       <button type="submit">Log In</button>
       <div class="create-account">
