--- a/createEvent/event.html
+++ b/createEvent/event.html
@@ -9,44 +9,50 @@
   <style>
     /* Custom styles for the event form */
     body {
-      font-family:'Times New Roman', Times, serif;
-      background-color: #06173d; /* Light gray background */
-      color: #333; /* Dark text color */
+      font-family: 'Times New Roman', Times, serif;
+      background-color: #1e1e1e; /* Dark background */
+      color: #e0e0e0; /* Light text color */
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      min-height: 100vh;
+      margin: 0;
     }
 
     .container {
       max-width: 600px;
       margin: 50px auto;
-      background-color: #ffffff; /* White background */
+      background-color: #2c2c2c; /* Dark container background */
       padding: 30px;
       border-radius: 10px;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); /* Soft shadow */
+      box-shadow: 0 0 20px rgba(0, 0, 0, 0.5); /* Stronger shadow */
     }
 
     h1 {
       text-align: center;
       font-size: 2.5rem;
       margin-bottom: 30px;
-      color: #4a90e2; /* Blue header color */
+      color: #4caf50; /* Green header color */
     }
 
     label {
       font-size: 1rem;
       font-weight: 600;
-      color: #4a90e2; /* Blue label color */
+      color: #4caf50; /* Green label color */
     }
 
     input[type="text"],
     input[type="date"],
     input[type="time"],
-    textarea {
+    textarea,
+    input[type="file"] {
       width: 100%;
       padding: 12px;
       margin-bottom: 20px;
-      border: 1px solid #ddd; /* Light gray border */
+      border: 1px solid #444; /* Dark border */
       border-radius: 5px;
-      background-color: #f9fafb; /* Light gray background */
-      color: #333; /* Dark text color */
+      background-color: #3c3c3c; /* Dark input background */
+      color: #e0e0e0; /* Light text color */
       font-size: 1rem;
       transition: border-color 0.3s ease-in-out;
     }
@@ -54,16 +60,17 @@
     input[type="text"]:focus,
     input[type="date"]:focus,
     input[type="time"]:focus,
-    textarea:focus {
+    textarea:focus,
+    input[type="file"]:focus {
       outline: none;
-      border-color: #4a90e2; /* Blue focus border color */
+      border-color: #4caf50; /* Green focus border color */
     }
 
     button[type="submit"] {
       width: 100%;
       padding: 15px;
       margin-top: 20px;
-      background-color: #4a90e2; /* Blue button background */
+      background-color: #4caf50; /* Green button background */
       color: #ffffff; /* White text color */
       border: none;
       border-radius: 8px;
@@ -73,52 +80,55 @@
     }
 
     button[type="submit"]:hover {
-      background-color: #3579b3; /* Darker blue on hover */
+      background-color: #45a049; /* Darker green on hover */
     }
   </style>
 </head>
 
 <body>
-
   <div class="container">
     <form class="max-w-md mx-auto mt-10" id="event_form">
       <h1>Add Your Event</h1>
       <div class="mb-5">
         <label for="user_avatar">Upload Event Image</label>
-        <input type="file" id="user_avatar" class="block w-full py-2.5 px-4 text-sm rounded-lg cursor-pointer bg-gray-200 border border-gray-300 focus:outline-none focus:border-blue-500 transition-colors duration-300 ease-in-out"
+        <input type="file" id="user_avatar"
+          class="block w-full py-2.5 px-4 text-sm rounded-lg cursor-pointer bg-gray-700 border border-gray-600 focus:outline-none focus:border-green-500 transition-colors duration-300 ease-in-out"
           aria-describedby="user_avatar_help" required>
       </div>
       <div class="mb-5">
         <label for="floating_password">Event Title</label>
-        <input type="text" name="title" id="floating_password" placeholder="Enter event title" class="block w-full py-2.5 px-4 text-sm rounded-lg border-gray-300 bg-gray-200 focus:outline-none focus:border-blue-500 transition-colors duration-300 ease-in-out"
-          required>
+        <input type="text" name="title" id="floating_password" placeholder="Enter event title"
+          class="block w-full py-2.5 px-4 text-sm rounded-lg border-gray-600 bg-gray-700 focus:outline-none focus:border-green-500 transition-colors duration-300 ease-in-out" required>
       </div>
       <div class="mb-5">
         <label for="event_desc">Description</label>
-        <textarea id="event_desc" name="Description" placeholder="Enter event description" rows="4" class="block w-full py-2.5 px-4 text-sm rounded-lg border-gray-300 bg-gray-200 focus:outline-none focus:border-blue-500 transition-colors duration-300 ease-in-out"
+        <textarea id="event_desc" name="Description" placeholder="Enter event description" rows="4"
+          class="block w-full py-2.5 px-4 text-sm rounded-lg border-gray-600 bg-gray-700 focus:outline-none focus:border-green-500 transition-colors duration-300 ease-in-out"
           required></textarea>
       </div>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
         <div class="mb-5">
           <label for="Location">Location</label>
-          <input type="text" name="Location" id="Location" placeholder="Enter event location" class="block w-full py-2.5 px-4 text-sm rounded-lg border-gray-300 bg-gray-200 focus:outline-none focus:border-blue-500 transition-colors duration-300 ease-in-out"
-            required>
+          <input type="text" name="Location" id="Location" placeholder="Enter event location"
+            class="block w-full py-2.5 px-4 text-sm rounded-lg border-gray-600 bg-gray-700 focus:outline-none focus:border-green-500 transition-colors duration-300 ease-in-out" required>
         </div>
         <div class="mb-5">
           <label for="date">Date</label>
-          <input type="date" name="date" id="date" class="block w-full py-2.5 px-4 text-sm rounded-lg border-gray-300 bg-gray-200 focus:outline-none focus:border-blue-500 transition-colors duration-300 ease-in-out"
+          <input type="date" name="date" id="date"
+            class="block w-full py-2.5 px-4 text-sm rounded-lg border-gray-600 bg-gray-700 focus:outline-none focus:border-green-500 transition-colors duration-300 ease-in-out"
             required>
         </div>
         <div class="mb-5">
           <label for="time">Time</label>
-          <input type="time" name="time" id="time" class="block w-full py-2.5 px-4 text-sm rounded-lg border-gray-300 bg-gray-200 focus:outline-none focus:border-blue-500 transition-colors duration-300 ease-in-out"
+          <input type="time" name="time" id="time"
+            class="block w-full py-2.5 px-4 text-sm rounded-lg border-gray-600 bg-gray-700 focus:outline-none focus:border-green-500 transition-colors duration-300 ease-in-out"
             required>
         </div>
       </div>
       <button type="submit">Add Event</button>
     </form>
   </div>
-
+  <script src="./event.js" type="module"></script>
 </body>
-<script src="./event.js" type="module"></script>
+
 </html>
