--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="container mx-auto px-4 py-3 flex justify-between items-center">
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
         <img src="https://flowbite.com/docs/images/logo.svg" alt="Flowbite Logo">
-        <span class="text-2xl font-semibold text-white">Events Planner</span>
+        <span class="text-2xl font-semibold text-white">Foodbook</span>
       </a>
       <div class="flex items-center space-x-6 rtl:space-x-reverse">
         <a id="create_event_btn" href="./createEvent/event.html" class="text-white hover:text-blue-400 transition-colors duration-300 ease-in-out">Create Events</a>
