--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <nav class="navbar">
     <div class="container mx-auto px-4 py-3 flex justify-between items-center">
       <a href="#" class="flex items-center space-x-3 rtl:space-x-reverse">
-        <img src="https://flowbite.com/docs/images/logo.svg" alt="Flowbite Logo">
+        <img src="https://img.freepik.com/free-vector/restaurant-tasty-food-logo-design_460848-10307.jpg" alt="Logo">
         <span class="text-2xl font-semibold text-white">Foodbook</span>
       </a>
       <div class="flex items-center space-x-6 rtl:space-x-reverse">
